# F-ANOVA-py

./: .gitignore  LICENSE  README.md  functionalANOVA.py  pyproject.toml  requirements.txt
functionalANOVA/: OneWay.py  OneWay_BF.py  PlotCovariances.py  Utils.py  __init__.py  core.py  function_subsetter.py  k_group_cov.py  k_group_cov_pairwise.py  one_way.py  one_way_BF.py  oneway_example.py  plot_covariances.py  plot_means.py  timer.py  two_group_cov.py  two_way.py  two_way_BF.py  twoway_example.py  utils.py
functionalANOVA/Data/: example_data.mat  example_data_2.mat  gait_data.csv
functionalANOVA/core/: __init__.py  fanova.py  k_group_cov.py  one_way_BF.py  plot_covariances.py  plot_means.py  plot_test_stats.py  two_way.py  two_way_BF.py  utils.py
functionalANOVA/core/methods/: covariances.py  oneway.py  plotting.py  twoway.py
tests/: cov_test.py  test.py  test_one_way.py  test_two_group_cov.py
