[project]
name = "f-anova-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
