[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f-anova-py"
version = "0.1.0"
description = "A Python adaptation of LANL's F-ANOVA project"
authors = [{ name="Shankar Chawla", email="shankarchawla9101112@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "rich>=14.0.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
include = ["functionalANOVA*"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
